# dispatcher

./: .gitignore  .travis.yml  App.sample.toml  App.toml.sample  CHANGELOG.md  Cargo.toml  README.md  deploy.init.sh  deploy.sh  skaffold.yml  sqlx-data.json  werf.yaml
.github/workflows/: build-dev-artifacts.yml  build-release-artifacts.yml  build.yml  check.yml  ci.yml  converge.yml  deploy.yml  docs.yml  mdbook.yml
.helm/: secret-values.yaml  values.yaml
.helm/templates/: 09-app-cm.yaml  10-app.yaml  20-svc.yaml  30-app-hpa.yaml  30-app-vpa.yaml  90-ingress.yaml  _env.tpl  _probes.tpl  _volumes.tpl
chart/: Chart.yaml  sample.yaml  values.yaml  values.yaml.example
chart/templates/: _helpers.tpl  app-cm.yaml  configmap.yaml  env.yaml  headless-svc.yaml  ingress.yaml  pdb.yaml  servicemonitor.yaml  services.yaml  sts.yaml
chart/templates/network/: cluster-svc.yaml  ing.yaml
chart/templates/tests/: test-connection.yaml
chart/templates/util/: servicemonitor.yaml
docker/: Dockerfile  migration.dockerfile
docs/: book.toml
docs/data/: dispatcher.schema.xml
docs/src/: SUMMARY.md  authz.md  overview.md
docs/src/authz/: chats.md  classrooms.md  events.md  overview.md  p2p.md  proxy.md  webinars.md
docs/src/chats/: api.md  overview.md
docs/src/classes/: api.md
docs/src/classrooms/: api.md
docs/src/minigroups/: api.md  events.md  overview.md
docs/src/p2p/: api.md  overview.md
docs/src/scopes/: scopes.md
docs/src/utils/: ban.md  transcoding.md
docs/src/webinars/: api.md  authz.md  events.md  overview.md
migrations/: 20210127110454_initial.sql  20210202084214_AddAppToScope.sql  20210205074644_AddClass.sql  20210205084024_AddRecording.sql  20210311091712_AddStreamUriToRecording.sql  20210316091336_RemoveTitleFromClass.sql  20210318131740_AddClassroomToClassType.sql  20210318132022_AddChat.sql  20210326124055_AddMinigroup.sql  20210326124655_AddMinigroupHostCheck.sql  20210408124212_add_created_by_to_recording.sql  20210420084301_AddUniquenessOnAudienceScope.sql  20210420131003_AddReserveToClass.sql  20210421123120_AddDeletedAtToRecording.sql  20210426161955_redo_uniq_recording_per_class_index.sql  20210428145427_add_p2p_to_classtype.sql  20210428150157_rename_classroom_to_p2p_in_classtype.sql  20210518225552_drop_host_from_class.sql  20210521124054_add_room_events_uri.sql  20210531124824_uri_started_at_segments_nullable.sql  20210721082435_AddChatToClassType.sql  20210721082436_ChangeClassToAccomodateChats.sql  20210813092733_add_host_to_class.sql  20210903124455_add_timeouted_to_class.sql  20210913155828_add_indices_to_class.sql  20211124070636_recording_rtc_id_index.sql  20211230103423_create_record_timestamps.sql  20220113103618_remove_chats.sql  20220113122012_add_established_to_class.sql  20220609163609_add_class_properties.sql  20220725092817_add_original_class_id_to_class.sql  20220726091936_add_content_id_to_class.sql  20220726093921_set_content_id_as_scope.sql  20220726094757_set_content_id_not_null.sql  20220801104021_add_account_properties.sql  20230517104549_add_ban_account_op_table.sql  20230519094604_add_ban_sequence.sql  20230714081909_add_ban_history.sql
src/: config.rs  main.rs  serde.rs  test_helpers.rs  utils.rs
src/app/: authz.rs  error.rs  http.rs  info.rs  metrics.rs  mod.rs  request_logger.rs  routes.rs  tide_state.rs  turn_host.rs
src/app/api/: mod.rs
src/app/api/v1/: account.rs  mod.rs
src/app/api/v1/account/: ban.rs  mod.rs
src/app/api/v1/authz/: mod.rs
src/app/api/v1/chat/: mod.rs
src/app/api/v1/class/: commit_edition.rs  create_timestamp.rs  mod.rs  properties.rs  read.rs  recreate.rs  update.rs
src/app/api/v1/classroom/: mod.rs
src/app/api/v1/minigroup/: download.rs  mod.rs  recreate.rs  update.rs  whiteboard.rs
src/app/api/v1/p2p/: mod.rs
src/app/api/v1/tests/: mod.rs
src/app/api/v1/webinar/: convert.rs  create.rs  download.rs  mod.rs  recreate.rs  restart_transcoding.rs  update.rs
src/app/api/v1/webinar/create/: mod.rs  replica.rs  webinar.rs
src/app/middleware/: cors.rs  mod.rs
src/app/postprocessing_strategy/: minigroup.rs  mod.rs  shared_helpers.rs  webinar.rs
src/app/postprocessing_strategy/minigroup/: mod.rs  tests.rs
src/app/services/: mod.rs
src/app/stage/: ban.rs  ban_intent.rs  mod.rs
src/app/tide_state/: conference_client.rs  event_client.rs  message_handler.rs  mod.rs  tq_client.rs
src/clients/: conference.rs  event.rs  mod.rs  nats.rs  tq.rs
src/clients/event/: client.rs  mod.rs  mqtt_client.rs  tower_client.rs  types.rs
src/clients/event/layer/: log.rs  metrics.rs  mod.rs  serializer.rs
src/db/: account.rs  authz.rs  ban_account_op.rs  ban_history.rs  chat.rs  class.rs  frontend.rs  mod.rs  record_timestamp.rs  recording.rs  scope.rs
src/db/class/: chat.rs  classroom.rs  insert_query.rs  minigroup.rs  mod.rs  p2p.rs  webinar.rs
src/test_helpers/: agent.rs  authz.rs  db.rs  factory.rs  mod.rs  outgoing_envelope.rs  shared_helpers.rs  state.rs
