[package]
name = "dispatcher"
version = "0.2.41"
authors = ["Andrei Nesterov <ae.nesterov@gmail.com>"]
description = "Service managing classrooms"
readme = "README.md"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.4", features = ["headers"] }
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.12", default-features = false, features = ["toml"] }
futures = "0.3"
futures-channel = "0.3"
hashring = "0.3.0"
headers = "0.3"
http = "0.2"
humantime-serde = "1"
hyper = { version = "0.14.17", features = ["server"] }
once_cell = "1"
percent-encoding = "2.1"
pin-utils = "0.1.0"
prometheus = "0.13"
prometheus-static-metric = "0.5"
quaint = { version = "0.1", features = ["uuid-0_8", "chrono-0_4"] }
rand = "0.8"
reqwest = "0.11"
sentry = { version = "0.23", default-features = true }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.3.6"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
sqlx = { version = "0.5", features = [
    "offline",
    "postgres",
    "macros",
    "uuid",
    "chrono",
    "json",
    "bigdecimal",
    "runtime-tokio-native-tls",
] }
svc-agent = { version = "0.19", features = ["sqlx"] }
svc-authn = { version = "0.7", features = ["jose", "sqlx"] }
svc-authz = "0.11"
svc-error = { version = "0.4", features = [
    "svc-agent",
    "svc-authn",
    "svc-authz",
    "sentry-extension",
    "sqlx",
] }
svc-utils = { version = "0.2", features = ["log-middleware", "metrics-middleware", "cors-middleware", "authn-extractor"] }
tokio = { version = "1.17", features = ["full"] }
tower = { version = "0.4", features = [ "timeout" ] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-attributes  = "0.1"
tracing-error = "0.2"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = { version = "2.2.1", features = ["serde"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
vec1 = { version = "1.8.0", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4"
mockall = "0.9.1"

[profile.release]
debug = true
